verif/test/deca/codegen/invalid/logiques/float-bool-verif.res
src/test/deca/codegen/invalid/logiques/float-bool.deca:10:7: Incompatible types for boolean binary operator '||' between 'float' and 'boolean'
